--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -8,7 +8,7 @@
 {% block header %}
 <div id="combined_search_pool">
 
-    <a href="#"><div id="vendor_back_button">
+    <a href="/results/?{{ request.GET.urlencode }}"><div id="vendor_back_button">
         <span class="back_text">Back to search results</span>
     </div></a>
 
