--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -76,7 +76,7 @@
 
 
 
-            <div id="container">
+        <div id="container">
 
             <a name="skip" > </a >
             {% block body %}
@@ -116,17 +116,16 @@
                         <div class="cta_spacer">
                         <span class="cta_email">email:</span>
                         <span class="cta_email_address">mirage-18f@gsa.gov</span>
-                        </div>
-                        </div>
+                        </div><!--end cta_spacer<!-->
                     </div><!--end call_to_action<!-->
 
                     <div class="logo_container">
                         <div class="built_by">Built by</div>
                         <a href="https://18f.gsa.gov"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png" alt="18F logo"></div></a>
                         <a href="http://www.gsa.gov" alt="GSA logo"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
-                    </div>
+                    </div><!--end logo_container<!-->
                 </div><!--end footer<!-->
-                <!--end footer_container<!-->
+                </div><!--end footer_container<!-->
 
         <style>
         /*  #naics-code { width: 100%; }
