--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -63,7 +63,7 @@
             <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
                     <div class="logo"><img src="/static/mirage_site/images/logo.png"></div>
-                    <a href="/"><div class="oasis_title"><img src="/static/mirage_site/images/mirage.png"></div></a>
+                    <a href="/"><div class="oasis_title"><img alt="Mirage Logo" src="/static/mirage_site/images/mirage.png"></div></a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
 
                 </div><!--end page_title<!-->
@@ -100,7 +100,7 @@
                     <div id="footer_nav">
                     <ul>
                         <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>  
-                        <li><a href="https://github.com/18F/mirage"><img src="/static/mirage_site/images/github_icon.png">
+                        <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="/static/mirage_site/images/github_icon.png">
                         Check out our code on GitHub</a></li>                  
                     </ul>
 
