--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -35,7 +35,7 @@
         <![endif]-->
 
         <!--
-            <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-responsive-min.css" %">[if gt IE 8]><!-->
+            <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-responsive-min.css" %}">[if gt IE 8]><!-->
 
          <!--[if gt IE 8]><!-->
             <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-core-min.css" %}">
