--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -7,7 +7,7 @@
     <div id="vehicle_select">
             <span class="select_text">Select vehicle</span>
         <form id="vehicle-select">
-            <select id="placeholder" class="vehicle_select_style" title="Select a Vehicle">
+            <select id="placeholder" class="vehicle_select_style" title="1. Select a vehicle">
                 <option></option>
                 <option value="oasissb">OASIS SB</option>
                 <option value="oasis">OASIS Unrestricted</option>
@@ -17,7 +17,7 @@
 
     <div id="search">
         <span class="select_text">Select NAICS code or description</span>
-        <form id="naics-search" class="pure-form" title="select_a_naics_code_or_description">
+        <form id="naics-search" class="pure-form" title="2. Select a NAICS code or description">
             <select id="naics-code">
                 <option></option>
             </select>
@@ -28,7 +28,7 @@
     <div id="filter_container">
         <span class="select_text" id="choose_filters">Choose filters (OASIS SB Only)</span>
         <div id="filter" class="filterbox">
-            <form id="setaside-filters" class="pure-form pure-form-stacked">
+            <form id="setaside-filters" class="pure-form pure-form-stacked" title="3. Choose Filters (OASIS SB Only)">
                 <fieldset>
                     <div id="filter_c1">
                         <label class="pure-checkbox" for="8a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
