--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -31,7 +31,7 @@
             <form id="setaside-filters" class="pure-form pure-form-stacked" title="3. Choose Filters (OASIS SB Only)">
                 <fieldset>
                     <div id="filter_c1">
-                        <label class="pure-checkbox" for="8a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
+                        <label class="pure-checkbox" for="eight_a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
                         <label class="pure-checkbox" for="Hubz" title="choose_filter_Hubzone"><input class="se_filter" type="checkbox" id="Hubz" name="Hubz" value="XX" aria-labeledby="choose_filters" {% if "XX" in request.GET.setasides %}checked{% endif %} />HUBZone</label>
                         <label class="pure-checkbox" for="disvet" title="choose_filter_disabled_veteran"><input class="se_filter" type="checkbox" id="disvet" name="disvet" value="QF" aria-labeledby="choose_filters" {% if "QF" in request.GET.setasides %}checked{% endif %}/>Service Disabled<br> Veteran Owned</label>
                     </div>
