fixed row and col scoping. closes #332

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -38,22 +38,22 @@
         			<div class="vendor_detail_table" >
                 <table id="socioeconomic_indicators">
                     <tr>
-                        <td>
+                        <td scope="col">
                             8(a)
                         </td>
-                        <td>
+                        <td scope="col">
                             HubZ
                         </td>
-                        <td>
+                        <td scope="col">
                             SDVO
                         </td>
-                         <td>
+                         <td scope="col">
                             WO
                         </td>
-                        <td>
+                        <td scope="col">
                             VO
                         </td>
-                        <td>
+                        <td scope="col">
                             SDB
                         </td>
                     </tr>                    
