--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -82,7 +82,7 @@
         			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_phone admin_data2"></span></p>
         			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_email admin_data2"></span></p>
         	</div><!--end vendor_admin_c3<!-->
-                <div id="sb_badge"><img src="/static/mirage_site/images/sb_badge.png"></div>
+                <div id="sb_badge"><img src="{% static "mirage_site/images/sb_badge.png" %}"></div>
         </div><!--end vendor_admin_container<!-->
 
 
