--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -675,7 +675,7 @@ img.green_dot   {
 }.pooldetail tr td:last-child{
     border-width:1px 1px 1px 1px;
 }.pooldetail tr:last-child td:last-child{
-    border-width:0px 0px 0px 1px;
+    border-width:0px 1px 1px 1px;
 }
 .pooldetail tr:first-child td{
     background-color:#4A85A3;
@@ -794,14 +794,14 @@ img.green_dot   {
     background:url(../../images/download_icon.png);
     background-repeat: no-repeat;
     background-position: 0px 3px;
-    
     margin-top:5px;
 }
-
 #download_data_results:hover {
     text-decoration: underline;
 }
-
+#csv_container  {
+    float:right;
+}
 #download_data_results  {
     margin-top:-21px;
     min-height:20px;
@@ -809,14 +809,13 @@ img.green_dot   {
     background:url(../../images/download_icon.png);
     background-repeat: no-repeat;
     background-position: 0px 3px;
-    float:right;
+    
 }
 #vendor_sam_expiration_container    {
     font-size:1em;
     padding-bottom:6px;
 }
 .vendor_sam_expiration_text {
-
 }
 .vendor_sam_expiration_date {
     color:#084b5a;
@@ -832,7 +831,6 @@ img.green_dot   {
     float:left;
     min-height:110px;
     margin-left:70px;
-    
 }
 .admin_label    {
     display:inline-block;
@@ -1205,4 +1203,29 @@ img.green_dot   {
     height:1px;
     overflow:hidden;
 }
+#skiptocontent a {
+    padding:6px;
+    position: absolute;
+    top:-40px;
+    left:0px;
+    color:white !important;
+    border-right:1px solid white;
+    border-bottom:1px solid white;
+    border-bottom-right-radius:8px;
+    background:transparent;
+    -webkit-transition: top 1s ease-out, background 1s linear;
+    transition: top 1s ease-out, background 1s linear;
+    z-index: 100;
+}
+
+#skiptocontent a:focus {
+    position:absolute;
+    left:0px;
+    top:0px;
+    background:#BF1722;
+    outline:0;  
+    -webkit-transition: top .1s ease-in, background .5s linear;
+    transition: top .1s ease-in, background .5s linear;
+}
+
 
