--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -60,7 +60,7 @@
     <body>
 
         <div id="page_top_container">
-            <a href="#skip" class="offscreen">Skip Content</a>
+            <div id="skiptocontent"><a href="#skip" class="">skip to main content</a></div>
             <div id="header">
             <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
@@ -94,6 +94,7 @@
                 <!--END CUSTOM PAGE CONTENT!-->  
 
         </div><!--end container<!-->
+
 
             <div class="cf"></div>
 
