--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -11,7 +11,10 @@
         <div id="number_of_results">
             <span class="matching_your_search"></span>
         </div><!--end number_of_results<!-->
+            <div id="csv_container">
              <a id="csv_link" href="#"><div id="download_data_results">download data (CSV)</div></a>
+            </div>
+
         </div><!--end results_pool_name_number<!-->
 
         <div id="your_search_criteria">
