--- a/mirage_site/templates/api_theme/index.html
+++ b/mirage_site/templates/api_theme/index.html
@@ -42,19 +42,20 @@
 
   </div>
 
-  <script src="{% static 'rest_framework_swagger/lib/shred.bundle.js' %}" type="text/javascript"></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery-1.8.0.min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery.slideto.min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery.wiggle.min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery.ba-bbq.min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery.cookie.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/handlebars-1.0.0.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/underscore-min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/backbone-min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/swagger.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/swagger-ui.min.js" %}' type='text/javascript'></script>
-  <script src='{% static "rest_framework_swagger/lib/highlight.8.0.pack.js" %}' type='text/javascript'></script>
-  <script type="text/javascript">
+  <script src="{% static 'rest_framework_swagger/lib/shred.bundle.js' %}"></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery-1.8.0.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery.slideto.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery.wiggle.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery.ba-bbq.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery.cookie.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/handlebars-1.0.0.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/underscore-min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/backbone-min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/swagger.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/swagger-ui.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/highlight.8.0.pack.js" %}'></script>
+  <script>
+
     $(function () {
       window.swaggerUi = new SwaggerUi({
       url: "{{ swagger_settings.discovery_url }}",
