--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<!doctype HTML>
+<!DOCTYPE HTML>
 <html lang="en">
     
     <head>
@@ -10,18 +10,18 @@
         <title>Mirage</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
-        <script type="text/javascript" src="{% static "mirage_site/js/jquery-1.11.1.min.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
-         <script type="text/javascript" src="{% static "mirage_site/js/jquery.fireOnDisable.js" %}"></script>
+        <script src="{% static "mirage_site/js/jquery-1.11.1.min.js" %}"></script>
+        <script src="{% static "mirage_site/js/select2.min.js" %}"></script>
+         <script src="{% static "mirage_site/js/jquery.fireOnDisable.js" %}"></script>
 
-        <script type="text/javascript" src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/input-handler.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/requests-manager.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/layout-manager.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/url-manager.js" %}"></script>
+        <script src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
+        <script src="{% static "mirage_site/js/input-handler.js" %}"></script>
+        <script src="{% static "mirage_site/js/requests-manager.js" %}"></script>
+        <script src="{% static "mirage_site/js/layout-manager.js" %}"></script>
+        <script src="{% static "mirage_site/js/url-manager.js" %}"></script>
 
-        <script type="text/javascript" src="{% static "mirage_site/js/index.js" %}"></script>
-        <script type="text/javascript">
+        <script src="{% static "mirage_site/js/index.js" %}"></script>
+        <script>
             var static_image_path = "{% static "mirage_site/images/" %}";
         </script>
 
@@ -139,7 +139,7 @@
 
 
 
-        <script type="text/javascript" src="{% static "mirage_site/js/mediator.min.js" %}"></script>
+        <script src="{% static "mirage_site/js/mediator.min.js" %}"></script>
         {% block page_js %}
         {% endblock %}
         <script>
@@ -153,10 +153,10 @@
 
         </script>
 
-        <script type="text/javascript" src="http://www.gsa.gov/resources/js/federated-analytics.js"></script>
+        <script src="http://www.gsa.gov/resources/js/federated-analytics.js"></script>
         <!-- for DAP -->
-        <script type="text/javascript" src="http://www.gsa.gov/resources/js/addLinkerEvents-std.js"></script>
-        <script type="text/javascript">
+        <script src="http://www.gsa.gov/resources/js/addLinkerEvents-std.js"></script>
+        <script>
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-28449919-1']);
             //Commented as per sarah Hyder. It will stay commented for another 30 days from the day we deploy then it has to be removed. commented on 05/22/2012    
