--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -1,12 +1,11 @@
 {% load staticfiles %}
 <!DOCTYPE HTML>
 <html lang="en">
-    
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        
+
         <title>Mirage</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -25,9 +24,9 @@
             var static_image_path = "{% static "mirage_site/images/" %}";
         </script>
 
-        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/pure-min.css" %}" />
-        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/base-min.css" %}" />
-        <link rel="stylesheet" href="{% static "mirage_site/css/select2.css" %}" />
+        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/pure-min.css" %}">
+        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/base-min.css" %}">
+        <link rel="stylesheet" href="{% static "mirage_site/css/select2.css" %}">
         {% block css %}
         {% endblock %}
 
@@ -42,9 +41,7 @@
          <!--[if gt IE 8]><!-->
             <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-core-min.css" %}">
         <!--<![endif]-->
-        
 
-        
         <!--[if gte IE 7]><!-->
             <link rel="stylesheet" href="{% static "mirage_site/css/layouts/blog.css" %}">
         <!--<![endif]-->
@@ -66,7 +63,7 @@
                 <div id="page_title">
                     <div class="logo"><img src="{% static "mirage_site/images/logo.png" %}"></div>
                     <a href="/">
-                        <div class="oasis_title"><img alt="Mirage Logo" src="{% static "mirage_site/images/mirage.png" %}" />
+                        <div class="oasis_title"><img alt="Mirage Logo" src="{% static "mirage_site/images/mirage.png" %}">
                         </div>
                     </a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
@@ -74,11 +71,8 @@
             </div><!--end header<!-->
         </div><!--end page_top_container<!-->
 
-
-                {% block header %}    
+                {% block header %}
                 {% endblock header %}
-
-
 
         <div id="container">
 
@@ -86,14 +80,14 @@
             {% block body %}
             {% endblock body %}
 
-            <!--CUSTOM PAGE CONTENT HERE!-->            
+            <!--CUSTOM PAGE CONTENT HERE!-->
 
             <div id="custom_page_content">
                 {% block content %}
                 {% endblock %}
             </div><!--end custom_page_content<!-->
 
-            <!--END CUSTOM PAGE CONTENT!-->  
+            <!--END CUSTOM PAGE CONTENT!-->
 
         </div><!--end container<!-->
 
@@ -104,15 +98,15 @@
             <div id="footer">
                 <div id="footer_nav">
                     <ul>
-                        <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>  
-                        <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="{% static "mirage_site/images/github_icon.png" %}" />Check out our code on GitHub</a></li>                  
+                        <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>
+                        <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="{% static "mirage_site/images/github_icon.png" %}"> Check out our code on GitHub</a></li>
                     </ul>
 
                 </div><!--end footer_nav<!-->
 
                 <div id="call_to_action">
                     <div class="cta_title">Want to help develop Mirage?</div>
-                    <span class="cta_text">We are always looking for volunteers to try out prototypes.  Or drop us a line with your questions & comments.</span>
+                    <span class="cta_text">We are always looking for volunteers to try out prototypes.  Or drop us a line with your questions &amp; comments.</span>
 
                     <span class="cta_feedback">
                     We'd love your feedback!
@@ -125,8 +119,8 @@
 
                 <div class="logo_container">
                     <div class="built_by">Built by</div>
-                    <a href="https://18f.gsa.gov"><div class="logo1"><img src="{% static "mirage_site/images/logo-18f.png"%} " alt="18F logo" /></div></a>
-                    <a href="http://www.gsa.gov"><div class="logo2"><img src="{% static "mirage_site/images/gsa_logo.jpg" %} " alt="GSA logo" /></div></a>
+                    <a href="https://18f.gsa.gov"><div class="logo1"><img src="{% static "mirage_site/images/logo-18f.png"%} " alt="18F logo"></div></a>
+                    <a href="http://www.gsa.gov"><div class="logo2"><img src="{% static "mirage_site/images/gsa_logo.jpg" %} " alt="GSA logo"></div></a>
                 </div><!--end logo_container<!-->
             </div><!--end footer<!-->
         </div><!--end footer_container<!-->
@@ -159,7 +153,7 @@
         <script>
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-28449919-1']);
-            //Commented as per sarah Hyder. It will stay commented for another 30 days from the day we deploy then it has to be removed. commented on 05/22/2012    
+            //Commented as per sarah Hyder. It will stay commented for another 30 days from the day we deploy then it has to be removed. commented on 05/22/2012
             //_gaq.push(['_setVisitorCookieTimeout', 0]);
             //_gaq.push(['_setSessionCookieTimeout', 0]);
             //_gaq.push(['_setCampaignCookieTimeout', 0]);
