--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -9,45 +9,45 @@
         <title>Mirage</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
-        <script src="{% static "mirage_site/js/jquery-1.11.1.min.js" %}"></script>
-        <script src="{% static "mirage_site/js/select2.min.js" %}"></script>
-         <script src="{% static "mirage_site/js/jquery.fireOnDisable.js" %}"></script>
+        <script src="{% static 'mirage_site/js/jquery-1.11.1.min.js' %}"></script>
+        <script src="{% static 'mirage_site/js/select2.min.js' %}"></script>
+        <script src="{% static 'mirage_site/js/jquery.fireOnDisable.js' %}"></script>
 
-        <script src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
-        <script src="{% static "mirage_site/js/input-handler.js" %}"></script>
-        <script src="{% static "mirage_site/js/requests-manager.js" %}"></script>
-        <script src="{% static "mirage_site/js/layout-manager.js" %}"></script>
-        <script src="{% static "mirage_site/js/url-manager.js" %}"></script>
+        <script src="{% static 'mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js' %}"></script>
+        <script src="{% static 'mirage_site/js/input-handler.js' %}"></script>
+        <script src="{% static 'mirage_site/js/requests-manager.js' %}"></script>
+        <script src="{% static 'mirage_site/js/layout-manager.js' %}"></script>
+        <script src="{% static 'mirage_site/js/url-manager.js' %}"></script>
 
-        <script src="{% static "mirage_site/js/index.js" %}"></script>
+        <script src="{% static 'mirage_site/js/index.js' %}"></script>
         <script>
-            var static_image_path = "{% static "mirage_site/images/" %}";
+        var static_image_path = "{% static 'mirage_site/images/' %}";
         </script>
 
-        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/pure-min.css" %}">
-        <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/base-min.css" %}">
-        <link rel="stylesheet" href="{% static "mirage_site/css/select2.css" %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/pure-min.css' %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/base-min.css' %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/select2.css' %}">
         {% block css %}
         {% endblock %}
 
 
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-responsive-old-ie-min.css" %}">
+            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-old-ie-min.css' %}">
         <![endif]-->
 
         <!--
-            <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-responsive-min.css" %}">[if gt IE 8]><!-->
+            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-min.css' %}">[if gt IE 8]><!-->
 
          <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="{% static "mirage_site/css/pure-release-0.5.0/grids-core-min.css" %}">
+            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-core-min.css' %}">
         <!--<![endif]-->
 
         <!--[if gte IE 7]><!-->
-            <link rel="stylesheet" href="{% static "mirage_site/css/layouts/blog.css" %}">
+            <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog.css' %}">
         <!--<![endif]-->
 
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="{% static "mirage_site/css/layouts/blog-old-ie.css" %}">
+            <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog-old-ie.css' %}">
         <![endif]-->
 
         <!--[if lt IE 9]>
@@ -61,9 +61,9 @@
             <div id="header">
                 <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
-                    <div class="logo"><img src="{% static "mirage_site/images/logo.png" %}"></div>
+                    <div class="logo"><img src="{% static 'mirage_site/images/logo.png' %}"></div>
                     <a href="/">
-                        <div class="oasis_title"><img alt="Mirage Logo" src="{% static "mirage_site/images/mirage.png" %}">
+                        <div class="oasis_title"><img alt="Mirage Logo" src="{% static 'mirage_site/images/mirage.png' %}">
                         </div>
                     </a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
@@ -99,7 +99,7 @@
                 <div id="footer_nav">
                     <ul>
                         <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>
-                        <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="{% static "mirage_site/images/github_icon.png" %}"> Check out our code on GitHub</a></li>
+                        <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="{% static 'mirage_site/images/github_icon.png' %}"> Check out our code on GitHub</a></li>
                     </ul>
 
                 </div><!--end footer_nav<!-->
@@ -119,8 +119,8 @@
 
                 <div class="logo_container">
                     <div class="built_by">Built by</div>
-                    <a href="https://18f.gsa.gov"><div class="logo1"><img src="{% static "mirage_site/images/logo-18f.png"%} " alt="18F logo"></div></a>
-                    <a href="http://www.gsa.gov"><div class="logo2"><img src="{% static "mirage_site/images/gsa_logo.jpg" %} " alt="GSA logo"></div></a>
+                    <a href="https://18f.gsa.gov"><div class="logo1"><img src="{% static 'mirage_site/images/logo-18f.png' %} " alt="18F logo"></div></a>
+                    <a href="http://www.gsa.gov"><div class="logo2"><img src="{% static 'mirage_site/images/gsa_logo.jpg' %} " alt="GSA logo"></div></a>
                 </div><!--end logo_container<!-->
             </div><!--end footer<!-->
         </div><!--end footer_container<!-->
@@ -133,7 +133,7 @@
 
 
 
-        <script src="{% static "mirage_site/js/mediator.min.js" %}"></script>
+        <script src="{% static 'mirage_site/js/mediator.min.js' %}"></script>
         {% block page_js %}
         {% endblock %}
         <script>
