--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -32,26 +32,25 @@
 
 
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-old-ie-min.css' %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-old-ie-min.css' %}">
         <![endif]-->
 
-        <!--
-            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-min.css' %}">[if gt IE 8]><!-->
+        <!-- <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-min.css' %}"> -->
 
-         <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-core-min.css' %}">
+        <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-core-min.css' %}">
         <!--<![endif]-->
 
         <!--[if gte IE 7]><!-->
-            <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog.css' %}">
         <!--<![endif]-->
 
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog-old-ie.css' %}">
+        <link rel="stylesheet" href="{% static 'mirage_site/css/layouts/blog-old-ie.css' %}">
         <![endif]-->
 
         <!--[if lt IE 9]>
-            <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
         <![endif]-->
     </head>
     <body>
