--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -100,6 +100,7 @@
                     <ul>
                         <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>
                         <li><a href="https://github.com/18F/mirage"><img alt="GitHub Logo" src="{% static 'mirage_site/images/github_icon.png' %}"> Check out our code on GitHub</a></li>
+                        <li><a href="/docs/">Read the API documentation</a></li>
                     </ul>
 
                 </div><!--end footer_nav<!-->
