HTML comment normalization, etc.

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -47,9 +47,8 @@
 {% endblock %}
 
 {% block page_js %}
-    <script type="text/javascript" src="{% static "mirage_site/js/requests-manager-listings.js" %}"></script>
-    <script type="text/javascript" src="{% static "mirage_site/js/layout-manager-listings.js" %}"></script>
-
-    <script type="text/javascript" src="{% static "mirage_site/js/requests-manager-index.js" %}"></script>
-    <script type="text/javascript" src="{% static "mirage_site/js/layout-manager-index.js" %}"></script>
+    <script src="{% static 'mirage_site/js/requests-manager-listings.js' %}"></script>
+    <script src="{% static 'mirage_site/js/layout-manager-listings.js' %}"></script>
+    <script src="{% static 'mirage_site/js/requests-manager-index.js' %}"></script>
+    <script src="{% static 'mirage_site/js/layout-manager-index.js' %}"></script>
 {% endblock %}
