--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Mirage</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
